{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 627,
  "lineage": "8f826bab-053c-73a5-3405-db0f51e1f428",
  "resources": [
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02cb75f995890cd96",
            "arn": "arn:aws:ec2:us-east-2:806721437369:instance/i-01bb6f31f3645341d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01bb6f31f3645341d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.nano",
            "ipv6_address_count": 0,
            "key_name": "bastion-stg",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b2ead8efe52f0fbe",
            "private_dns": "ip-172-17-136-147.us-east-2.compute.internal",
            "private_ip": "172.17.136.147",
            "public_dns": "ec2-3-133-119-217.us-east-2.compute.amazonaws.com",
            "public_ip": "3.133.119.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "bastion-root-stg"
                },
                "throughput": 0,
                "volume_id": "vol-041d00eafded84517",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e40342d4d2ee3f04",
            "tags": {
              "Name": "bastion-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "bastion-stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-004b3240a655ccde1"
            ]
          },
          "dependencies": [
            "module.bastion.aws_key_pair.bastion",
            "module.sg.aws_security_group.bastion",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.influxdb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "influxdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-001857c2476ba6db2",
            "arn": "arn:aws:ec2:us-east-2:806721437369:instance/i-015870724a70db7ce",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": true,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015870724a70db7ce",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "influxdb-stg",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ed53ec2c6798866e",
            "private_dns": "ip-172-17-13-199.us-east-2.compute.internal",
            "private_ip": "172.17.13.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "influxdb-root-stg"
                },
                "throughput": 0,
                "volume_id": "vol-02f67ee694b8bfcd4",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094e6e4751306cf31",
            "tags": {
              "Name": "influxdb-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "influxdb-stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0aa21f6800c5c2b89"
            ]
          },
          "dependencies": [
            "module.influxdb.aws_key_pair.influxdb",
            "module.sg.aws_security_group.influxdb",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:loadbalancer/app/middleware-stg/c38c2431cd5ebac8",
            "arn_suffix": "app/middleware-stg/c38c2431cd5ebac8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "middleware-stg-1689707132.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:806721437369:loadbalancer/app/middleware-stg/c38c2431cd5ebac8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "middleware-stg",
            "security_groups": [
              "sg-0dbf6189d2f06f5c2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0e40342d4d2ee3f04"
              },
              {
                "subnet_id": "subnet-0f0f2fea35cb2ff00"
              }
            ],
            "subnets": [
              "subnet-0e40342d4d2ee3f04",
              "subnet-0f0f2fea35cb2ff00"
            ],
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform"
            },
            "vpc_id": "vpc-0f1e016778e1d2c13",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_subnet.subnet_middleware_b_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:listener/app/middleware-stg/c38c2431cd5ebac8/b9ce74924955821e",
            "certificate_arn": "arn:aws:acm:us-east-2:806721437369:certificate/a198562c-3a3a-49ec-b125-193f53222d12",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:targetgroup/middleware-stg/4eebfb0d937cd152",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:806721437369:listener/app/middleware-stg/c38c2431cd5ebac8/b9ce74924955821e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:loadbalancer/app/middleware-stg/c38c2431cd5ebac8",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.acm.aws_acm_certificate.middleware_domain",
            "module.load_balancer.aws_lb.middleware",
            "module.middleware.aws_lb_target_group.middleware",
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_subnet.subnet_middleware_b_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "middleware_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:listener/app/middleware-stg/c38c2431cd5ebac8/7bf78aa2350f24eb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:806721437369:listener/app/middleware-stg/c38c2431cd5ebac8/7bf78aa2350f24eb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:loadbalancer/app/middleware-stg/c38c2431cd5ebac8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.load_balancer.aws_lb.middleware",
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_subnet.subnet_middleware_b_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.middleware",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:806721437369:targetgroup/middleware-stg/4eebfb0d937cd152",
            "arn_suffix": "targetgroup/middleware-stg/4eebfb0d937cd152",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 10,
                "matcher": "200",
                "path": "/health-check",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:806721437369:targetgroup/middleware-stg/4eebfb0d937cd152",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "middleware-stg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.mongodb",
      "mode": "managed",
      "type": "aws_instance",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02cb75f995890cd96",
            "arn": "arn:aws:ec2:us-east-2:806721437369:instance/i-027b98b94df995fd1",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-027b98b94df995fd1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m6g.large",
            "ipv6_address_count": 0,
            "key_name": "mongodb-stg",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ea6dd57c3cdad5cb",
            "private_dns": "ip-172-17-2-167.us-east-2.compute.internal",
            "private_ip": "172.17.2.167",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags": {
                  "Name": "mongodb-root-stg"
                },
                "throughput": 0,
                "volume_id": "vol-08b2dfed4907e779f",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094e6e4751306cf31",
            "tags": {
              "Name": "mongodb-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "mongodb-stg"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06cd62177ac2560da"
            ]
          },
          "dependencies": [
            "module.mongodb.aws_key_pair.mongodb",
            "module.sg.aws_security_group.mongodb",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-004b3240a655ccde1",
            "description": "bastion-stg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Output default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-004b3240a655ccde1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH - All",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "bastion-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "influxdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-0aa21f6800c5c2b89",
            "description": "influxdb-stg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Output default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa21f6800c5c2b89",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "InfluxDB - ECS",
                "from_port": 8086,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0880ce8ddd4dc7abc"
                ],
                "self": false,
                "to_port": 8086
              },
              {
                "cidr_blocks": [],
                "description": "SSH - All",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004b3240a655ccde1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "influxdb-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "influxdb-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "influxdb-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "middleware_cache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-0aaa6a0be396c2e80",
            "description": "middleware-cache-stg",
            "egress": [],
            "id": "sg-0aaa6a0be396c2e80",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Redis - ECS",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0880ce8ddd4dc7abc"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "middleware-cache-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "middleware-cache-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "middleware-cache-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "middleware_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-0880ce8ddd4dc7abc",
            "description": "middleware-ecs-stg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Output default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0880ce8ddd4dc7abc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP - ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dbf6189d2f06f5c2"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "middleware-ecs-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "middleware-ecs-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "middleware-ecs-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "middleware_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-0dbf6189d2f06f5c2",
            "description": "middleware-loadbalancer-stg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Output default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbf6189d2f06f5c2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP - Public",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS - Public",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "middleware-loadbalancer-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "middleware-loadbalancer-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "middleware-loadbalancer-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "middleware_mq",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-04c676e99fcac7d44",
            "description": "middleware-mq-stg",
            "egress": [],
            "id": "sg-04c676e99fcac7d44",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "RabbitMQ - ECS",
                "from_port": 5671,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0880ce8ddd4dc7abc"
                ],
                "self": false,
                "to_port": 5672
              },
              {
                "cidr_blocks": [],
                "description": "RabbitMQ Manager - Bastion",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004b3240a655ccde1"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "middleware-mq-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "middleware-mq-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "middleware-mq-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mongodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:security-group/sg-06cd62177ac2560da",
            "description": "mongodb-stg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Output default",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cd62177ac2560da",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MongoDB - ECS",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0880ce8ddd4dc7abc"
                ],
                "self": false,
                "to_port": 27017
              },
              {
                "cidr_blocks": [],
                "description": "SSH - All",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-004b3240a655ccde1"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "mongodb-stg",
            "name_prefix": "",
            "owner_id": "806721437369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mongodb-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "mongodb-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH - All",
            "from_port": 22,
            "id": "sgrule-3231060411",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-004b3240a655ccde1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Output default",
            "from_port": 0,
            "id": "sgrule-4121202188",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-004b3240a655ccde1",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "influxdb_in_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "InfluxDB - ECS",
            "from_port": 8086,
            "id": "sgrule-1444031075",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa21f6800c5c2b89",
            "self": false,
            "source_security_group_id": "sg-0880ce8ddd4dc7abc",
            "to_port": 8086,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.influxdb",
            "module.sg.aws_security_group.middleware_ecs",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "influxdb_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "SSH - All",
            "from_port": 22,
            "id": "sgrule-1000402452",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aa21f6800c5c2b89",
            "self": false,
            "source_security_group_id": "sg-004b3240a655ccde1",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.influxdb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "influxdb_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Output default",
            "from_port": 0,
            "id": "sgrule-594316420",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0aa21f6800c5c2b89",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.influxdb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_cache_in_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Redis - ECS",
            "from_port": 6379,
            "id": "sgrule-1317126599",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0aaa6a0be396c2e80",
            "self": false,
            "source_security_group_id": "sg-0880ce8ddd4dc7abc",
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_cache",
            "module.sg.aws_security_group.middleware_ecs",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_ecs_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "HTTP - ALB",
            "from_port": 8080,
            "id": "sgrule-184587991",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0880ce8ddd4dc7abc",
            "self": false,
            "source_security_group_id": "sg-0dbf6189d2f06f5c2",
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_ecs",
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_ecs_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Output default",
            "from_port": 0,
            "id": "sgrule-1585691080",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0880ce8ddd4dc7abc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_ecs",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_lb_in_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP - Public",
            "from_port": 80,
            "id": "sgrule-957428345",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbf6189d2f06f5c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_lb_in_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS - Public",
            "from_port": 443,
            "id": "sgrule-2416560348",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dbf6189d2f06f5c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_lb_out",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Output default",
            "from_port": 0,
            "id": "sgrule-801411759",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0dbf6189d2f06f5c2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_lb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_mq_in_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "RabbitMQ Manager - Bastion",
            "from_port": 443,
            "id": "sgrule-1290825301",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04c676e99fcac7d44",
            "self": false,
            "source_security_group_id": "sg-004b3240a655ccde1",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.middleware_mq",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "middleware_mq_in_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "RabbitMQ - ECS",
            "from_port": 5671,
            "id": "sgrule-990623451",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04c676e99fcac7d44",
            "self": false,
            "source_security_group_id": "sg-0880ce8ddd4dc7abc",
            "to_port": 5672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_ecs",
            "module.sg.aws_security_group.middleware_mq",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_in_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "MongoDB - ECS",
            "from_port": 27017,
            "id": "sgrule-1356299825",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06cd62177ac2560da",
            "self": false,
            "source_security_group_id": "sg-0880ce8ddd4dc7abc",
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.middleware_ecs",
            "module.sg.aws_security_group.mongodb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_in_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "SSH - All",
            "from_port": 22,
            "id": "sgrule-3566768947",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06cd62177ac2560da",
            "self": false,
            "source_security_group_id": "sg-004b3240a655ccde1",
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.bastion",
            "module.sg.aws_security_group.mongodb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "mongodb_out_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Output default",
            "from_port": 0,
            "id": "sgrule-2077435232",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06cd62177ac2560da",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.sg.aws_security_group.mongodb",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d330318fa43f4269",
            "association_id": "eipassoc-05a67a50862980adb",
            "domain": "vpc",
            "id": "eipalloc-0d330318fa43f4269",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0142073ec1e08ab31",
            "private_dns": "ip-172-17-132-13.us-east-2.compute.internal",
            "private_ip": "172.17.132.13",
            "public_dns": "ec2-52-15-198-153.us-east-2.compute.amazonaws.com",
            "public_ip": "52.15.198.153",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:internet-gateway/igw-094cf3c0af343230e",
            "id": "igw-094cf3c0af343230e",
            "owner_id": "806721437369",
            "tags": {
              "Name": "ig-middleware-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "ig-middleware-stg"
            },
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "dependencies": [
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d330318fa43f4269",
            "connectivity_type": "public",
            "id": "nat-0f31aa30bd08076dc",
            "network_interface_id": "eni-0142073ec1e08ab31",
            "private_ip": "172.17.132.13",
            "public_ip": "52.15.198.153",
            "subnet_id": "subnet-0e40342d4d2ee3f04",
            "tags": {
              "Name": "nat-middleware-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "nat-middleware-stg"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:route-table/rtb-033c4481d13be7a8c",
            "id": "rtb-033c4481d13be7a8c",
            "owner_id": "806721437369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f31aa30bd08076dc",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-middleware-private-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "rt-middleware-private-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:route-table/rtb-0caa802f2f38d6c70",
            "id": "rtb-0caa802f2f38d6c70",
            "owner_id": "806721437369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-094cf3c0af343230e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-middleware-public-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "rt-middleware-public-stg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_vpc.middleware"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee741529a366c68c",
            "route_table_id": "rtb-033c4481d13be7a8c",
            "subnet_id": "subnet-094e6e4751306cf31"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_middleware_a",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011cceddd8c217d9c",
            "route_table_id": "rtb-033c4481d13be7a8c",
            "subnet_id": "subnet-011d7e5e2bd374006"
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_subnet.subnet_middleware_b",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c59c3240a07391d0",
            "route_table_id": "rtb-0caa802f2f38d6c70",
            "subnet_id": "subnet-0e40342d4d2ee3f04"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_middleware_a_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d911561e275cac4",
            "route_table_id": "rtb-0caa802f2f38d6c70",
            "subnet_id": "subnet-0f0f2fea35cb2ff00"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.subnet_middleware_b_public",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_middleware_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:subnet/subnet-094e6e4751306cf31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094e6e4751306cf31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806721437369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-middleware-a-private-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "subnet-middleware-a-private-stg"
            },
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_middleware_a_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:subnet/subnet-0e40342d4d2ee3f04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.17.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e40342d4d2ee3f04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806721437369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-middleware-a-public-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "subnet-middleware-a-public-stg"
            },
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_middleware_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:subnet/subnet-011d7e5e2bd374006",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011d7e5e2bd374006",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806721437369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-middleware-b-private-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "subnet-middleware-b-private-stg"
            },
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_middleware_b_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:subnet/subnet-0f0f2fea35cb2ff00",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.17.160.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0f2fea35cb2ff00",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "806721437369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-middleware-b-public-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "subnet-middleware-b-public-stg"
            },
            "vpc_id": "vpc-0f1e016778e1d2c13"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.middleware",
            "module.vpc.aws_vpc.middleware",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "middleware",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:806721437369:vpc/vpc-0f1e016778e1d2c13",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-001d40d1647b181d8",
            "default_route_table_id": "rtb-0b4ae0c9306ede5a1",
            "default_security_group_id": "sg-02c31e2ad0c7da0bd",
            "dhcp_options_id": "dopt-5369dc3b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f1e016778e1d2c13",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b4ae0c9306ede5a1",
            "owner_id": "806721437369",
            "tags": {
              "Name": "vpc-middleware-stg"
            },
            "tags_all": {
              "Application": "Middleware",
              "CreatedBy": "Terraform",
              "Name": "vpc-middleware-stg"
            }
          }
        }
      ]
    }
  ]
}